--- a/BaiTapBuoi5_070921.ipynb
+++ b/BaiTapBuoi5_070921.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "source": [
     "#Bài 1:\r\n",
     "#Viết hàm có đầu vào là 1 chuỗi, trả ra số chữ cái, số ký tự viết hoa, số ký tự viết thường và số chữ số trong chuỗi đó. Giả sử đầu vào sau được cấp cho hàm:\r\n",
@@ -51,7 +51,7 @@
      "name": "stdout",
      "text": [
       "Nhập chuỗi ký tự và số:\n",
-      "{'LETTERS': 0, 'CASE': {'UPPER CASE': 0, 'LOWER CASE': 0}, 'DIGITS': 4}\n"
+      "{'LETTERS': 17, 'CASE': {'UPPER CASE': 4, 'LOWER CASE': 13}, 'DIGITS': 8}\n"
      ]
     }
    ],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "source": [
     "#Bài 2:\r\n",
     "#Cho một list A các điểm thi (từ 0-10) của các học viên trong lớp. Viết 3 hàm tính:\r\n",
@@ -120,8 +120,8 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Nhập list điểm số:\n",
-      "(5.1, 5.5, [7])\n"
+      "Nhập list điểm số cách nhau bằng dấu cách nha:\n",
+      "(6.0, 7, [8])\n"
      ]
     }
    ],
