--- a/BaiTapBuoi5_070921.ipynb
+++ b/BaiTapBuoi5_070921.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 65,
    "source": [
     "#Bài 1:\r\n",
     "#Viết hàm có đầu vào là 1 chuỗi, trả ra số chữ cái, số ký tự viết hoa, số ký tự viết thường và số chữ số trong chuỗi đó. Giả sử đầu vào sau được cấp cho hàm:\r\n",
@@ -51,7 +51,7 @@
      "name": "stdout",
      "text": [
       "Nhập chuỗi ký tự và số:\n",
-      "{'LETTERS': 17, 'CASE': {'UPPER CASE': 4, 'LOWER CASE': 13}, 'DIGITS': 8}\n"
+      "{'LETTERS': 0, 'CASE': {'UPPER CASE': 0, 'LOWER CASE': 0}, 'DIGITS': 4}\n"
      ]
     }
    ],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "source": [
     "#Bài 2:\r\n",
     "#Cho một list A các điểm thi (từ 0-10) của các học viên trong lớp. Viết 3 hàm tính:\r\n",
@@ -74,13 +74,10 @@
     "#A = [7, 8, 9, 2, 10, 9, 9, 9, 9, 4, 5, 6, 1, 5, 6, 7, 8, 6, 1, 10] ==> (mean(A), median(A), mode(A)) == (6.55, 7.0, [9])\r\n",
     "#B=[4,4,5,4,5,5] thì (mean(B), median(B), mode(B)) == (4.5, 4.5, [4,5])\r\n",
     "\r\n",
-    "#Em không biết làm thế nào để return được mode có nhiều giá trị, nó chỉ về được 1 :(\r\n",
-    "\r\n",
-    "\r\n",
-    "print(\"Nhập list điểm số cách nhau bằng dấu cách nha:\")\r\n",
-    "my_list = list(map(int, input().split()))\r\n",
     "\r\n",
     "#Hàm mean:\r\n",
+    "print(\"Nhập list điểm số cách nhau bằng dấu cách nha:\")\r\n",
+    "my_list = list(map(int, input().split()))\r\n",
     "def mean(my_list):\r\n",
     "    sum=0\r\n",
     "    for i in my_list:\r\n",
@@ -110,9 +107,11 @@
     "            count[i]=1\r\n",
     "    list_key = list(count.values())\r\n",
     "    max_value = max(list_key)\r\n",
+    "    list_mode =[]\r\n",
     "    for k, v in count.items():\r\n",
     "       if max_value in [v]:\r\n",
-    "           return  [k]\r\n",
+    "           list_mode.append(k)\r\n",
+    "    return list_mode\r\n",
     "\r\n",
     "Set = (mean(my_list),median(my_list),mode(my_list))\r\n",
     "print(Set)\r\n"
@@ -123,7 +122,7 @@
      "name": "stdout",
      "text": [
       "Nhập list điểm số cách nhau bằng dấu cách nha:\n",
-      "(4.5, 5.0, [6])\n"
+      "(4.909090909090909, 5, [5, 6, 7])\n"
      ]
     }
    ],
