--- a/BaiTapBuoi5_070921.ipynb
+++ b/BaiTapBuoi5_070921.ipynb
@@ -18,7 +18,7 @@
     "#ASCII = \"\".join(chr(x) for x in range(33, 128))\r\n",
     "#print(ASCII)\r\n",
     "\r\n",
-    "#a,\r\n",
+    "#a, Cách 1\r\n",
     "import re\r\n",
     "print(\"Nhập chuỗi ký tự và số:\")\r\n",
     "a = input()\r\n",
@@ -41,9 +41,7 @@
     "    return dict\r\n",
     "\r\n",
     "x = match_string(a)\r\n",
-    "print(x)\r\n",
-    "\r\n",
-    "#b, Chưa biết làm"
+    "print(x)\r\n"
    ],
    "outputs": [
     {
@@ -52,6 +50,41 @@
      "text": [
       "Nhập chuỗi ký tự và số:\n",
       "{'LETTERS': 0, 'CASE': {'UPPER CASE': 0, 'LOWER CASE': 0}, 'DIGITS': 4}\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    "#b, Cách 2:\r\n",
+    "\r\n",
+    "s = \"Nguyễn Thị Hồng Liên! 06/11/1994\"\r\n",
+    "def count_char_type(s):\r\n",
+    "    upperChars = \"\".join(chr(x) for x in range(65, 91))\r\n",
+    "    lowerChars = \"\".join(chr(x) for x in range(97, 123))\r\n",
+    "    digitChars = \"\".join(chr(x) for x in range(48, 58))\r\n",
+    "    letter,upper,lower,digit = 0,0,0,0\r\n",
+    "    for c in s:\r\n",
+    "        if c in digitChars:\r\n",
+    "            digit +=1\r\n",
+    "        elif c in upperChars:\r\n",
+    "            upper +=1\r\n",
+    "        elif c in lowerChars:\r\n",
+    "            lower +=1\r\n",
+    "    letter = upper+lower\r\n",
+    "    return {\"LETTERS\":letter, \"CASE\": {\"UPPER CASE\":upper, \"LOWER CASE\":lower}, \"DIGITS\":digit}\r\n",
+    "\r\n",
+    "print(count_char_type(s))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'LETTERS': 13, 'CASE': {'UPPER CASE': 4, 'LOWER CASE': 9}, 'DIGITS': 8}\n"
      ]
     }
    ],
