--- a/BaiTapBuoi6_110921.ipynb
+++ b/BaiTapBuoi6_110921.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "source": [
     "#Bài 2:\r\n",
     "#Điểm thi học kỳ của sinh viên được lưu ở định dạng 1 tuple có 3 phần tử (m1, m2, e) gồm:\r\n",
@@ -44,7 +44,11 @@
     "\r\n",
     "\r\n",
     "List_diem_thi = [(1, 2, 5), (9, 1, 2), (6, 4, 4), (3, 2, 3), (10, 2, 1)]\r\n",
-    "print(\"Kết quả sắp xếp tăng dần theo điểm cuối kỳ là: \",sorted(List_diem_thi,key=lambda x: x[::-1]))\r\n"
+    "def sort_list_last(list):\r\n",
+    "    sorted_by_score = sorted(list, key=lambda x: x[::-1])\r\n",
+    "    return sorted_by_score\r\n",
+    "\r\n",
+    "print(\"Kết quả sắp xếp tăng dần theo điểm cuối kỳ là: \",sort_list_last(List_diem_thi))\r\n"
    ],
    "outputs": [
     {
