--- a/hackathon1_midterm/Bai2.ipynb
+++ b/hackathon1_midterm/Bai2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "source": [
     "# Easy [1] Day different:\r\n",
     "#Viết hàm day_diff() nhận vào ngày phải release sản phẩm và ngày đội dev viết xong code. \r\n",
@@ -12,27 +12,24 @@
     "from datetime import datetime\r\n",
     "import time\r\n",
     "def day_diff(release_date, code_complete_day):\r\n",
-    "    #release_date =release_date.strftime('%d/%m/%Y')\r\n",
-    "    #code_complete_day = code_complete_day.strftime('%Y-%d-%m')\r\n",
-    "    #day_left = release_date.strftime(('%d/%m/%Y') - code_complete_day.strftime('%Y-%d-%m')\r\n",
-    "    time = datetime.strptime(release_date, '%d/%m/%Y') - datetime.strptime(code_complete_day, '%Y-%d-%m')\r\n",
-    "    return time\r\n",
-    "print(day_diff(\"19/12/2021\",\"2021-17-5\"))"
+    "    day_left = datetime.strptime(release_date, '%d/%m/%Y') - datetime.strptime(code_complete_day, '%Y-%d-%m')\r\n",
+    "    return day_left.days\r\n",
+    "print(day_diff(\"19/12/2021\",\"2021-17-05\"))"
    ],
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "AttributeError",
-     "evalue": "type object 'datetime.date' has no attribute 'strptime'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_1396/2394106056.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[0mtime\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdate\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrelease_date\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'%d/%m/%Y'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mdate\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcode_complete_day\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'%Y-%d-%m'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mday_diff\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"19/12/2021\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"2021-17-5\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_1396/2394106056.py\u001b[0m in \u001b[0;36mday_diff\u001b[1;34m(release_date, code_complete_day)\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;31m#code_complete_day = code_complete_day.strftime('%Y-%d-%m')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[1;31m#day_left = release_date.strftime(('%d/%m/%Y') - code_complete_day.strftime('%Y-%d-%m')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m     \u001b[0mtime\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdate\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrelease_date\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'%d/%m/%Y'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mdate\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcode_complete_day\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'%Y-%d-%m'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mday_diff\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"19/12/2021\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"2021-17-5\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: type object 'datetime.date' has no attribute 'strptime'"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "216\n"
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
    "metadata": {}
   }
  ],
