--- a/hackathon1_midterm/Bai3.ipynb
+++ b/hackathon1_midterm/Bai3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "source": [
     "# Medium [1] Anagram Number:\r\n",
     "#Viết hàm anagram_number() có đầu vào là một số nguyên và trả ra True nếu sau khi đảo ngược thứ tự các chữ số của số đó vẫn cho ta số ban đầu. \r\n",
@@ -10,7 +10,7 @@
     "#vd: anagram_number(121121) == True\r\n",
     "    #anagram_number(1254) == False\r\n",
     "\r\n",
-    "def anagram(number):\r\n",
+    "def anagram_number(number):\r\n",
     "    string1 = str(number)\r\n",
     "    string2 = ''.join(reversed(string1))\r\n",
     "    number1 = int(string2)\r\n",
@@ -18,10 +18,18 @@
     "        return True\r\n",
     "    else:\r\n",
     "        return False\r\n",
-    "print(anagram(1254))\r\n",
-    "#print(anagram(121121))"
+    "print(anagram_number(1254))\r\n",
+    "#print(anagram_number(121121))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
