BVTVN OPP Buoi 1

--- a/OPP_Buoi1.ipynb
+++ b/OPP_Buoi1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "source": [
     "#Thay đổi các thuộc tính account_number, account_name, balance trong class BankAccount thành thuộc tính ẩn, và triển khai thêm các phương thức:\r\n",
     "#get_account_number()\r\n",
@@ -30,6 +30,12 @@
     "    def get_balance(self):\r\n",
     "        return self._balance\r\n",
     "\r\n",
+    "    def set_balance(self, new_balance):\r\n",
+    "        if new_balance >= 0:\r\n",
+    "            self._balance = new_balance\r\n",
+    "        else:\r\n",
+    "            print(\"Số dư không hợp lệ\")\r\n",
+    "\r\n",
     "    def withdraw(self,amount):\r\n",
     "        if 0<= amount <= self._balance :\r\n",
     "            self._balance -= amount\r\n",
@@ -42,12 +48,6 @@
     "            self._balance +=  amount\r\n",
     "        else:\r\n",
     "            print('Phải nạp số tiền lớn hơn 0')\r\n",
-    "\r\n",
-    "    def set_balance(self, new_balance):\r\n",
-    "        if new_balance >= 0:\r\n",
-    "            self._balance = new_balance\r\n",
-    "        if new_balance <0:\r\n",
-    "            print(\"Số dư không hợp lệ\")\r\n",
     "\r\n",
     "    def display(self):\r\n",
     "        print(f\"Acount number: {self.get_account_number()}, Account name: {self.get_account_name()}, Account balace: {self.get_balance()}\")\r\n",
